tests/ui/attr_expected_ident.stderr
error: fixcol-derive error: Expected identifier.
 --> tests/ui/attr_expected_ident.rs:5:24
  |
5 |     #[fixed(width = 5, "right")]
  |                        ^^^^^^^
